Jun 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- move generic code for running a program into util.c
- Nexuiz support

Jun 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add doom3 protocol 1.40 to menu (Steffen Pankratz)

Apr 29, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- honor setting to ignore bots when copying server info to clipboard

Apr 15, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add q3a Excessive Plus gametypes (patch by Jason Santos)

Apr 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add finish translation by Sami Laitinen

Mar 24, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- use separate server type for ut2004
- add epic's second ut2004 master

Mar 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- change default ET protocol to 84, fix qstat.cfg

Mar 06, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS file for 1.0.3

Feb 22, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix ut2k4 and doom3 master query not working after starting xqf

Feb 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix logic for applying colors

Feb 19, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- use GTK2 colors and Raleigh theme by default in GTK1 version
- update German translation
- reorder some structs to reduce size

Feb 18, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix use of wrong server type when adding servers (#1143801, thanks roerich
  and kracho for helping to debug this)

Feb 05, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- make all icons themeable
- make yellow man actually yellow instead of green

Feb 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add --nomapscan option
- add ET Gslist master
- mark q3 servers with protocol different from master as incompatible

Feb 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update Danish translation (Morten Brix Pedersen)

Jan 30, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- remove quakeforge specials